Revert "alpha 0.0.4 - warnings review"
This reverts commit d11520b81352e0756dd439b458dbc933a233b52e.

deliverer golams where broken, try to changed class concerning it, can't figure what broke it so undo